# redash-mcp

./: .gitignore  LICENSE  README.md  pyproject.toml
src/redash_mcp/: __init__.py  api.py  config.py  server.py  viz.py
